# CommPart

./: CMakeLists.txt  LICENSE.TXT  README.md  build.sh  format_code.sh  run.sh  setup_env.sh  setup_env_local.sh
demo-codes/: 2d-stencil.c  2d-stencil_original.c  full_buffer.c  full_buffer_in_loop.c  full_buffer_variabe_size.c  stencil-alike.c
lib/: check_impl.c  check_valgrind_output.py  correctness-checking-partitioned-impl.c  correctness-checking-partitioned-impl.h  run_valgrind_check.sh  valgrind_suppression
mpi_communication_partition/: CMakeLists.txt  Microtask.cpp  Microtask.h  Openmp_region.cpp  Openmp_region.h  analysis_results.cpp  analysis_results.h  debug.h  helper.cpp  helper.h  implementation_specific.cpp  implementation_specific.h  insert_changes.cpp  insert_changes.h  mpi_analysis.cpp  mpi_analysis.h  mpi_communication_partition_pass.cpp  mpi_functions.cpp  mpi_functions.h  sending_partitioning.cpp  sending_partitioning.h
